# FactoryVerse

./: .env.example  .gitignore  README.md  REMINDERS.md  action-export.lua  dsl-objects-trials.ipynb  factoryverse-system-prompt-v2.md  factoryverse-system-prompt.md  fv_filters.yaml  lets-play-factorio.ipynb  main.py  pyproject.toml  pytest.ini  run-envs.sh  running-tests.ipynb  trials.ipynb
docs/: REMOTE_INTERFACE_AUDIT.md  error_handling_comparison.md  tick-events-analysis.md
docs/system-prompt/: INTEGRATION.md  README.md  assemble_prompt.py  verification-loop-draft.md  (+5 more)
examples/: 01_basic_query_and_walk.py  02_mining_resources.py  03_placing_entities.py  04_automation_setup.py  05_full_workflow.py
scripts/: launch-postgres.sh  run-envs.sh  run_agent.py  run_inference.py  setup-save-w-scenario.sh  switch-factorio-version.sh  watch-hotreload.sh
tests/: README.md  conftest.py  reproduce_ghost_persistence.py  reproduce_types.py  test_all_handcrafting.py  test_dsl_contract.py  test_dsl_crafting.py  test_dsl_crafting_async.py  test_dsl_entities_async.py  test_dsl_inventory.py  test_dsl_mining.py  test_dsl_mining_async.py  test_dsl_placement.py  test_dsl_walking_async.py  test_fuel_validation.py  test_ground_examples.py  test_handcraftability_validation.py  test_infrastructure_validation.py  test_output_compressor.py  test_placeable_integration.py  test_prototype_queries.py  test_snapshot_validation.py  test_tool_validator.py  test_trajectory_manager.py  verify_agent_placement.py  verify_maintenance_updates.py  verify_placement_collisions.py  verify_snapshot_basics.py
(+416 files in other folders)
