[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factoryverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodocker>=0.24.0",
    "factorio-rcon-py>=2.1.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
]
[tool.hatch.build.targets.wheel]
packages = ["src/FactoryVerse"]
